First working version of Desktop app

--- a/Flagrum.Web/wwwroot/index.html
+++ b/Flagrum.Web/wwwroot/index.html
@@ -10,16 +10,17 @@
     <link href="_content/Z.Blazor.Diagrams/style.min.css" rel="stylesheet"/>
 </head>
 
-<body>
-<div id="app">Loading...</div>
+<body style="background-color: #181512">
+<div id="app"></div>
 
 <div id="blazor-error-ui">
     An unhandled error has occurred.
-    <a class="reload" href="">Reload</a>
+    <a class="reload font-bold" href="" style="text-decoration: underline">Restart</a>
     <a class="dismiss">🗙</a>
 </div>
 <script src="_framework/blazor.webview.js"></script>
 <script src="_content/Z.Blazor.Diagrams/script.min.js"></script>
+<script src="interop.js"></script>
 </body>
 
 </html>
