Switched ASCII encoding to UTF8 to enable JP characters

--- a/Flagrum.Web/wwwroot/index.html
+++ b/Flagrum.Web/wwwroot/index.html
@@ -10,7 +10,7 @@
     <link href="_content/Z.Blazor.Diagrams/style.min.css" rel="stylesheet"/>
 </head>
 
-<body style="background-color: #181512">
+<body style="background-color: #181512" class="font-body">
 <div id="app"></div>
 
 <div id="blazor-error-ui">
