Tidying, refactoring, etc

--- a/Flagrum.Web/wwwroot/index.html
+++ b/Flagrum.Web/wwwroot/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport"/>
-    <title>SequenceEditor</title>
+    <title>Flagrum</title>
     <base href="/"/>
     <link href="app.css" rel="stylesheet"/>
     <link href="_content/Z.Blazor.Diagrams/style.min.css" rel="stylesheet"/>
 </head>
 
-<body style="background-color: #181512" class="font-body">
+<body class="font-body" style="background-color: #181512">
 <div id="app"></div>
 
 <div id="blazor-error-ui">
