Completion of weapons and replacements + UI work

--- a/Flagrum.Web/wwwroot/index.html
+++ b/Flagrum.Web/wwwroot/index.html
@@ -7,7 +7,7 @@
     <title>Flagrum</title>
     <base href="/"/>
     <link href="app.css" rel="stylesheet"/>
-    <!--    <link href="_content/Z.Blazor.Diagrams/style.min.css" rel="stylesheet"/>-->
+    <link href="_content/Z.Blazor.Diagrams/style.min.css" rel="stylesheet"/>
 </head>
 
 <body class="font-body" style="background-color: #181512">
@@ -19,7 +19,7 @@
     <a class="dismiss">🗙</a>
 </div>
 <script src="_framework/blazor.webview.js"></script>
-<!--<script src="_content/Z.Blazor.Diagrams/script.min.js"></script>-->
+<script src="_content/Z.Blazor.Diagrams/script.min.js"></script>
 <script src="interop.js"></script>
 </body>
 
