--- a/Flagrum.Web/wwwroot/index.html
+++ b/Flagrum.Web/wwwroot/index.html
@@ -11,17 +11,20 @@
 </head>
 
 <body class="font-body" style="background-color: #181512">
-    <div id="app"></div>
+<div id="app"></div>
 
-    <div id="blazor-error-ui">
-        An unhandled error has occurred.
-        <a class="reload font-bold" href="" style="text-decoration: underline">Restart</a>
-        <a class="dismiss">🗙</a>
-    </div>
-    <script src="_framework/blazor.webview.js"></script>
-    <script src="_content/Z.Blazor.Diagrams/script.min.js"></script>
-    <script type="text/javascript" src="bmc.js" data-name="bmc-button" data-slug="Exineris" data-color="#FFDD00" data-emoji="" data-font="Cookie" data-text="Buy us a coffee" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff"></script>
-    <script src="interop.js"></script>
+<div id="blazor-error-ui">
+    An unhandled error has occurred.
+    <a class="reload font-bold" href="" style="text-decoration: underline">Restart</a>
+    <a class="dismiss">🗙</a>
+</div>
+<script src="_framework/blazor.webview.js"></script>
+<script src="_content/Z.Blazor.Diagrams/script.min.js"></script>
+<script src="_content/Blazor.Extensions.Canvas/blazor.extensions.canvas.js"></script>
+<script data-coffee-color="#ffffff" data-color="#FFDD00" data-emoji="" data-font="Cookie" data-font-color="#000000"
+        data-name="bmc-button" data-outline-color="#000000" data-slug="Exineris" data-text="Buy us a coffee"
+        src="bmc.js" type="text/javascript"></script>
+<script src="interop.js"></script>
 </body>
 
 </html>
