--- a/Flagrum.Web/Features/Information/Markup/Tutorials.html
+++ b/Flagrum.Web/Features/Information/Markup/Tutorials.html
@@ -10,7 +10,7 @@
 <a class="hyperlink" href="javascript:interop.openDotNetLink('https://github.com/Kizari/Flagrum/wiki/Interface-Tutorial')">Interface Tutorial by ImpatientTraveler</a><br />
 <a class="hyperlink" href="javascript:interop.openDotNetLink('https://github.com/Kizari/Flagrum/wiki/General-Usage-Tutorial')">General Usage Tutorial by ImpatientTraveler</a><br />
 <a class="hyperlink" href="javascript:interop.openDotNetLink('https://github.com/Kizari/Flagrum/wiki/Materials-Tutorial')">Materials Tutorial by ImpatientTraveler</a><br />
-<a class="hyperlink" href="javascript:interop.openDotNetLink('https://github.com/Kizari/Flagrum/wiki/Custom-Model-Replacements-Tutorial')">Custom Model Replacements Tutorial by Kizari</a>
+<a class="hyperlink" href="javascript:interop.openDotNetLink('https://github.com/Kizari/Flagrum/wiki/Environment-Exporter')">Environment Exporter Tutorial by Kizari</a>
 
 <h4 class="text-grey-300 mt-8 mb-4">3D Modelling Tutorials</h4>
 
