--- a/Flagrum.Desktop/wwwroot/index.html
+++ b/Flagrum.Desktop/wwwroot/index.html
@@ -8,7 +8,7 @@
     <base href="/"/>
     <link href="app.css" rel="stylesheet"/>
     <link href="_content/Z.Blazor.Diagrams/style.min.css" rel="stylesheet"/>
-    <link href="vendor/blazorContextMenu/blazorContextMenu.css" rel="stylesheet"/>
+    <link href="_content/Blazor.ContextMenu/blazorContextMenu.min.css" rel="stylesheet"/>
     
     <style>
         .context-menu {
@@ -43,7 +43,7 @@
 <script src="_framework/blazor.webview.js"></script>
 <script src="_content/Z.Blazor.Diagrams/script.min.js"></script>
 <script src="_content/Blazor.Extensions.Canvas/blazor.extensions.canvas.js"></script>
-<script src="vendor/blazorContextMenu/blazorContextMenu.js"></script>
+<script src="_content/Blazor.ContextMenu/blazorContextMenu.min.js"></script>
 <script data-coffee-color="#ffffff" data-color="#FFDD00" data-emoji="" data-font="Cookie" data-font-color="#000000"
         data-name="bmc-button" data-outline-color="#000000" data-slug="Exineris" data-text="Buy us a coffee"
         src="bmc.js" type="text/javascript"></script>
