--- a/Flagrum.Desktop/wwwroot/index.html
+++ b/Flagrum.Desktop/wwwroot/index.html
@@ -9,6 +9,8 @@
     <link href="app.css" rel="stylesheet"/>
     <link href="_content/Z.Blazor.Diagrams/style.min.css" rel="stylesheet"/>
     <link href="vendor/blazorContextMenu/blazorContextMenu.css" rel="stylesheet"/>
+    <link href="//cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+    <link href="//cdn.quilljs.com/1.3.6/quill.bubble.css" rel="stylesheet">
 
     <style>
         .context-menu {
@@ -44,6 +46,9 @@
 <script src="_framework/blazor.webview.js"></script>
 <script src="_content/Z.Blazor.Diagrams/script.min.js"></script>
 <script src="vendor/blazorContextMenu/blazorContextMenu.js"></script>
+<script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+<script src="_content/Blazored.TextEditor/quill-blot-formatter.min.js"></script>
+<script src="_content/Blazored.TextEditor/Blazored-BlazorQuill.js"></script>
 <script src="interop.js"></script>
 </body>
 
